--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ body {
 }
 
 .address {
+  display: inline-block;
   font-style: normal;
 }
 
@@ -157,7 +158,7 @@ body {
   background-color: var(--bgfooter);
 }
 
-.header_menu_nav.is-open {
+.header_menu_nav.is-open-mob {
   transform: translateX(0);
 }
 
@@ -212,6 +213,8 @@ body {
   letter-spacing: -0.02em;
 }
 
+.link.menu_item:hover,
+.link.menu_item:focus,
 .header_menu-item:hover .link,
 .header_menu-item:focus .link {
   color: var(--bg-button);
@@ -474,7 +477,7 @@ body {
 
 .ing_list_item {
   padding: 28px 28px 0 28px;
-  width: 335px;
+  max-width: 335px;
   height: 270px;
   border-radius: 15px;
   outline: 1px solid var(--bg-button);
@@ -523,7 +526,7 @@ body {
 }
 
 .howtomade_img {
-  width: 335px;
+  max-width: 335px;
   height: 500px;
   margin-bottom: 20px;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
@@ -775,7 +778,6 @@ body {
 }
 
 .footer_text {
-  margin-bottom: 32px;
   width: 300px;
   font-weight: 500;
   font-size: 24px;
@@ -804,7 +806,6 @@ body {
 
 .footer_nav_menu {
   position: relative;
-  margin-top: 64px;
   padding-bottom: 32px;
 }
 
@@ -819,11 +820,16 @@ body {
   outline: 1px solid rgba(255, 255, 255, 0.1);
 }
 
+.nav-menu {
+  display: inline-flex;
+  gap: 4px;
+  flex-direction: column;
+}
+
 .footer_menu {
   display: flex;
   flex-direction: column;
   gap: 18px;
-  margin-top: 32px;
 }
 
 .contact {
@@ -852,15 +858,63 @@ body {
 /* Окно Buynow */
 .window-buynow {
   position: absolute;
-  top: 50%;
+  top: 0;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
   background-color: var(--bgcolor);
   z-index: 998;
   width: 311px;
-  height: 794px;
+  height: 994px;
+  padding: 32px 24px;
   border-radius: 15px;
   overflow: scroll;
+}
+
+.buynow-title-text {
+  margin-bottom: 32px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+}
+
+.buynow-goods {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.buynow-goods-items {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 263px;
+  height: 85px;
+  padding: 0 16px;
+  background-color: var(--color_wh);
+  border: 1px solid rgba(17, 17, 17, 0.1);
+  border-radius: 15px;
+}
+
+.buy_img {
+  width: 84px;
+  height: 69px;
+}
+
+.buynow-goods-weight {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70px;
+  height: 29px;
+  background: #fafafa;
+  border: 1px solid rgba(17, 17, 17, 0.1);
+  border-radius: 100px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.2;
 }
 
 .subs-title {
@@ -1115,6 +1169,12 @@ body {
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: block !important;
+  overflow-y: auto;
+}
+
+.is-open-mob {
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay.is-visible {
@@ -1146,7 +1206,8 @@ body {
   transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-modal:hover {
+.icon-modal:hover,
+.icon-modal:focus {
   stroke: var(--bg-button);
   transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1154,6 +1215,14 @@ body {
 @media screen and (max-width: 767px) {
   .break {
     display: none;
+  }
+
+  .footer_text {
+    margin-bottom: 32px;
+  }
+
+  .nav-menu {
+    margin-bottom: 64px;
   }
 }
 
@@ -1307,7 +1376,7 @@ body {
   }
 
   .howtomade_img {
-    width: 614px;
+    max-width: 614px;
     height: 400px;
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
       url(../images/tablet/howtomade_img.jpg);
@@ -1410,23 +1479,30 @@ body {
 
   /* Секция Footer */
 
-  .footer {
+  .footer.container {
+    padding-bottom: 50px;
     padding-top: 50px;
   }
 
-  .footer.container {
-    padding-bottom: 50px;
+  .footer_info {
+    display: flex;
+    gap: 124px;
+    margin-bottom: 74px;
   }
 
   .footer_text {
     display: inline-block;
-    margin-bottom: 32px;
-    width: 300px;
+  }
+
+  .footer_contact_sect {
+    display: inline-flex;
+    flex-direction: column;
   }
 
   .footer_contact_block {
     display: inline-flex;
     justify-content: space-between;
+    gap: 137px;
   }
 
   .footer_contact {
@@ -1450,11 +1526,6 @@ body {
   .footer_menu {
     flex-direction: row;
     gap: 24px;
-  }
-
-  .contact {
-    display: inline-flex;
-    gap: 4px;
   }
 
   /* Модульное окно */
@@ -1567,6 +1638,15 @@ body {
   }
 
   /* Секция Footer */
+
+  .footer_contact_block {
+    gap: 152px;
+  }
+
+  .footer_info {
+    margin-bottom: 82px;
+    gap: 543px;
+  }
 
   .logotext {
     font-weight: 700;
@@ -1687,7 +1767,7 @@ body {
   }
 
   .ing_list_item {
-    flex-basis: calc((100% - 19px * 3) / 4);
+    max-width: calc((100% - 19px * 3) / 4);
   }
 
   /* Секция How made */
