--- a/css/style.css
+++ b/css/style.css
@@ -884,6 +884,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 8px;
+  margin-bottom: 32px;
 }
 
 .buynow-goods-items {
@@ -917,26 +918,19 @@ body {
   line-height: 1.2;
 }
 
-.subs-title {
-  padding: 32px 24px 24px 24px;
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: -0.03em;
-  text-transform: uppercase;
+.buynow-form {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
 }
 
-.subs-submit {
-  position: relative;
-  margin: 0 24px 32px 24px;
-}
-
-.subs-input {
+.buynow-form-item {
   width: 263px;
   height: 45px;
-  border-radius: 100px;
   border: 1.5px solid rgba(17, 17, 17, 0.05);
   filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
+  border-radius: 8px;
+
   padding-left: 18px;
   padding-right: 108px;
   font-size: 14px;
@@ -946,12 +940,31 @@ body {
   outline: transparent;
 }
 
-.subs-input::placeholder {
+.buynow-form-item-text {
+  width: 263px;
+  height: 91px;
+  border: 1.5px solid rgba(17, 17, 17, 0.05);
+  filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
+  border-radius: 8px;
+  text-align: start;
+  resize: none;
+  width: 100%;
+  height: 91px;
+  padding: 14px 18px;
+}
+
+.buynow-input::placeholder {
   color: rgba(64, 64, 64, 0.3);
 }
 
-#SubmitInput:not(:placeholder-shown):invalid {
-  outline: 1px solid red;
+#buynow-phone {
+  padding-left: 106px;
+}
+
+.card-prefix {
+  position: absolute;
+  right: 14px;
+  top: 50%;
 }
 
 .buynow-button {
@@ -1054,12 +1067,12 @@ body {
   color: rgba(64, 64, 64, 0.3);
 }
 
-#phone {
+#review-phone {
   padding-left: 106px;
 }
 
-#phone:not(:placeholder-shown):invalid,
-#email:not(:placeholder-shown):invalid {
+#review-phone:not(:placeholder-shown):invalid,
+#review-email:not(:placeholder-shown):invalid {
   outline: 1px solid red;
 }
 
@@ -1124,7 +1137,7 @@ body {
   color: rgba(64, 64, 64, 0.3);
 }
 
-#SubmitInput:not(:placeholder-shown):invalid {
+#submitinput:not(:placeholder-shown):invalid {
   outline: 1px solid red;
 }
 
@@ -1210,6 +1223,10 @@ body {
 .icon-modal:focus {
   stroke: var(--bg-button);
   transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal .phone-prefix .icon-modal {
+  stroke: none;
 }
 
 @media screen and (max-width: 767px) {
@@ -1588,7 +1605,7 @@ body {
     padding-right: 32px;
   }
 
-  #phone {
+  #review-phone {
     padding-left: 177px;
   }
 
