--- a/css/style.css
+++ b/css/style.css
@@ -472,7 +472,9 @@ body {
 .ing_list {
   display: inline-flex;
   flex-direction: column;
+  justify-content: center;
   gap: 20px;
+  width: 100%;
 }
 
 .ing_list_item {
@@ -636,7 +638,7 @@ body {
   align-items: center;
   width: 94px;
   height: 33px;
-  background: #fafafa;
+  background: var(--bgcolor);
   border: 1px solid rgba(17, 17, 17, 0.1);
   border-radius: 100px;
   font-weight: 600;
@@ -910,7 +912,7 @@ body {
   align-items: center;
   width: 70px;
   height: 29px;
-  background: #fafafa;
+  background: var(--bgcolor);
   border: 1px solid rgba(17, 17, 17, 0.1);
   border-radius: 100px;
   font-weight: 600;
@@ -924,26 +926,42 @@ body {
   gap: 18px;
 }
 
+.buynow-form-label {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: -0.02em;
+}
+
+.buynow-form-contact-info {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
 .buynow-form-item {
   width: 263px;
   height: 45px;
   border: 1.5px solid rgba(17, 17, 17, 0.05);
   filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
   border-radius: 8px;
-
   padding-left: 18px;
-  padding-right: 108px;
+  padding-right: 18px;
   font-size: 14px;
   line-height: 1.2;
   letter-spacing: -0.02em;
   color: var(--maincolorfont);
   outline: transparent;
+  margin-top: 8px;
+}
+
+#surname {
+  margin: 0;
 }
 
 .buynow-form-item-text {
-  width: 263px;
-  height: 91px;
-  border: 1.5px solid rgba(17, 17, 17, 0.05);
+  border: none;
+  outline: 1.5px solid rgba(17, 17, 17, 0.05);
   filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
   border-radius: 8px;
   text-align: start;
@@ -951,14 +969,35 @@ body {
   width: 100%;
   height: 91px;
   padding: 14px 18px;
-}
-
-.buynow-input::placeholder {
-  color: rgba(64, 64, 64, 0.3);
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: -0.02em;
+  color: var(--maincolorfont);
+  outline: transparent;
+  margin-top: 8px;
 }
 
 #buynow-phone {
   padding-left: 106px;
+}
+
+.phone-prefix {
+  position: absolute;
+  display: inline-flex;
+  gap: 8px;
+  z-index: 999;
+  left: 18px;
+  top: 50%;
+  padding-right: 8px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  transform: translateY(-50%);
+  border-right: 2px solid rgba(17, 17, 17, 0.05);
+  filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
+}
+
+.buynow-form .phone-prefix {
+  top: calc(50% + 12px);
 }
 
 .card-prefix {
@@ -970,7 +1009,7 @@ body {
 .buynow-button {
   position: absolute;
   padding: 0;
-  left: 24px;
+  left: 23px;
   bottom: 32px;
   width: 109px;
   height: 41px;
@@ -1047,33 +1086,8 @@ body {
   letter-spacing: -0.02em;
 }
 
-.phone-prefix {
-  position: absolute;
-  display: inline-flex;
-  gap: 8px;
-  z-index: 999;
-  left: 18px;
-  top: 50%;
-  padding-right: 8px;
-  padding-top: 4px;
-  padding-bottom: 4px;
-  transform: translateY(-50%);
-  border-right: 2px solid rgba(17, 17, 17, 0.05);
-  filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
-}
-
-.review-form-item::placeholder,
-.review-form-item-text::placeholder {
-  color: rgba(64, 64, 64, 0.3);
-}
-
 #review-phone {
   padding-left: 106px;
-}
-
-#review-phone:not(:placeholder-shown):invalid,
-#review-email:not(:placeholder-shown):invalid {
-  outline: 1px solid red;
 }
 
 .review-button {
@@ -1133,14 +1147,6 @@ body {
   outline: transparent;
 }
 
-.subs-input::placeholder {
-  color: rgba(64, 64, 64, 0.3);
-}
-
-#submitinput:not(:placeholder-shown):invalid {
-  outline: 1px solid red;
-}
-
 .subs-button {
   position: absolute;
   padding: 0;
@@ -1165,6 +1171,23 @@ body {
   background-color: var(--bg-button_hover);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.buynow-form-item::placeholder,
+.buynow-form-item-text::placeholder,
+.review-form-item::placeholder,
+.review-form-item-text::placeholder,
+.subs-input::placeholder {
+  color: rgba(64, 64, 64, 0.3);
+}
+
+#buynow-email:not(:placeholder-shown):invalid,
+#buynow-phone:not(:placeholder-shown):invalid,
+#buynow-mastercard:not(:placeholder-shown):invalid,
+#review-phone:not(:placeholder-shown):invalid,
+#review-email:not(:placeholder-shown):invalid,
+#submitinput:not(:placeholder-shown):invalid {
+  outline: 1px solid red;
 }
 
 .overlay {
@@ -1229,6 +1252,12 @@ body {
   stroke: none;
 }
 
+@media screen and (max-width: 374px) {
+  .main_butt {
+    flex-direction: column;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .break {
     display: none;
@@ -1246,8 +1275,6 @@ body {
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
-    margin-right: auto;
-    margin-left: auto;
     padding: 0 32px;
     padding-bottom: 50px;
   }
@@ -1648,8 +1675,6 @@ body {
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
-    margin-right: auto;
-    margin-left: auto;
     padding: 0 32px;
     padding-bottom: 72px;
   }
