--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,7 @@ body {
 }
 
 .main_text {
+  margin-bottom: 32px;
   padding-right: 10px;
   font-weight: 500;
   font-size: 20px;
@@ -283,7 +284,7 @@ body {
   display: inline-flex;
   justify-content: center;
   gap: 14px;
-  margin-top: 32px;
+  margin-bottom: 32px;
 }
 
 .scroll {
@@ -313,8 +314,14 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.main_scroll-cont:hover,
-.main_scroll-cont:focus {
+.main-scroll-block:hover .main_scroll,
+.main-scroll-block:focus .main_scroll {
+  color: var(--bg-button);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.main-scroll-block:focus .main_scroll-cont,
+.main-scroll-block:hover .main_scroll-cont {
   background-color: var(--bg-button);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -326,8 +333,8 @@ body {
   stroke: var(--bg-button);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.main_scroll-cont:hover .main_scroll-icon,
-.main_scroll-cont:focus .main_scroll-icon {
+.main-scroll-block:hover .main_scroll-icon,
+.main-scroll-block:focus .main_scroll-icon {
   fill: var(--color_wh);
   stroke: var(--color_wh);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1531,6 +1538,11 @@ body {
   .main-button {
     display: flex;
     justify-content: space-between;
+    align-items: flex-end;
+  }
+
+  .main_butt {
+    margin-bottom: 0;
   }
 
   .scroll {
