--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ body {
   border-radius: 100px;
 }
 
-.main_text {
+.main-text {
   margin-bottom: 32px;
   padding-right: 10px;
   font-weight: 500;
@@ -280,20 +280,19 @@ body {
   color: var(--color_wh);
 }
 
-.main_butt {
+.main-butt {
   display: inline-flex;
   justify-content: center;
   gap: 14px;
-  margin-bottom: 32px;
 }
 
-.scroll {
+.main-scroll-block {
   display: inline-flex;
   align-items: center;
   margin-top: 32px;
 }
 
-.main_scroll {
+.main-scroll {
   display: inline-flex;
   margin-right: 12px;
   font-weight: 500;
@@ -301,9 +300,10 @@ body {
   line-height: 1.17;
   letter-spacing: -0.03em;
   color: var(--color_wh);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.main_scroll-cont {
+.main-scroll-cont {
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -314,27 +314,27 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.main-scroll-block:hover .main_scroll,
-.main-scroll-block:focus .main_scroll {
+.main-scroll-block:hover .main-scroll,
+.main-scroll-block:focus .main-scroll {
   color: var(--bg-button);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.main-scroll-block:focus .main_scroll-cont,
-.main-scroll-block:hover .main_scroll-cont {
+.main-scroll-block:focus .main-scroll-cont,
+.main-scroll-block:hover .main-scroll-cont {
   background-color: var(--bg-button);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.main_scroll-icon {
+.main-scroll-icon {
   width: 16px;
   height: 15px;
   fill: var(--bg-button);
   stroke: var(--bg-button);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.main-scroll-block:hover .main_scroll-icon,
-.main-scroll-block:focus .main_scroll-icon {
+.main-scroll-block:hover .main-scroll-icon,
+.main-scroll-block:focus .main-scroll-icon {
   fill: var(--color_wh);
   stroke: var(--color_wh);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1450,7 +1450,7 @@ body {
 }
 
 @media screen and (max-width: 374px) {
-  .main_butt {
+  .main-butt {
     flex-direction: column;
   }
 }
@@ -1502,7 +1502,7 @@ body {
     }
   }
 
-  .main_text {
+  .main-text {
     padding-right: 140px;
     font-size: 28px;
     line-height: 1.21;
@@ -1541,22 +1541,22 @@ body {
     align-items: flex-end;
   }
 
-  .main_butt {
+  .main-butt {
     margin-bottom: 0;
   }
 
-  .scroll {
+  .main-scroll-block {
     margin-left: 149px;
   }
 
-  .main_scroll {
+  .main-scroll {
     margin-right: 14px;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.29;
   }
 
-  .main_scroll-cont {
+  .main-scroll-cont {
     width: 38px;
     height: 38px;
   }
@@ -2062,7 +2062,7 @@ body {
     }
   }
 
-  .main_text {
+  .main-text {
     padding-right: 572px;
     font-size: 28px;
     line-height: 1.21;
