--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,11 @@ body {
   stroke: var(--color_wh);
   transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-link:hover {
+
+.social-link:hover .social-svg,
+.social-link:focus .social-svg,
+.social-link:hover,
+.social-link:focus {
   stroke: var(--bg-button);
   transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1028,10 +1032,18 @@ body {
   color: var(--color_wh);
 }
 
+.contact:hover,
+.contact:focus {
+  color: var(--bg-button);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 /* Модальные окна */
 
 .modal {
-  display: none;
+  scale: 0;
+  opacity: 0;
+  transition: scale 500ms cubic-bezier(0.4, 0, 0.2, 1), opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
   position: fixed;
   z-index: 1;
   left: 0;
@@ -1040,6 +1052,50 @@ body {
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.5);
+  pointer-events: none;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-open {
+  scale: 1;
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow-y: auto;
+  pointer-events: all;
+}
+
+.is-open-mob {
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay.is-visible {
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  pointer-events: auto;
+}
+
+.close {
+  position: absolute;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  top: 14px;
+  right: 14px;
+  width: 12px;
+  height: 12px;
+  background-color: transparent;
 }
 
 /* Окно Buynow */
@@ -1055,6 +1111,17 @@ body {
   padding: 32px 24px;
   border-radius: 15px;
   overflow: scroll;
+  /* scale: 0;
+  transition: scale 500ms cubic-bezier(0.4, 0, 0.2, 1); */
+  transform: skew(180deg, 0deg);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal.is-open .window-buynow {
+  /* scale: 1;
+  transition: scale 500ms cubic-bezier(0.4, 0, 0.2, 1); */
+  transform: skew(0deg, 0deg);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buynow-title-text {
@@ -1385,47 +1452,6 @@ body {
 #review-email:not(:placeholder-shown):invalid,
 #submitinput:not(:placeholder-shown):invalid {
   outline: 1px solid red;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.is-open {
-  opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: block !important;
-  overflow-y: auto;
-}
-
-.is-open-mob {
-  opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.overlay.is-visible {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.close {
-  position: absolute;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  top: 14px;
-  right: 14px;
-  width: 12px;
-  height: 12px;
-  background-color: transparent;
 }
 
 .window-subs .icon-modal {
