--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,7 @@ body {
   transition: transform 250ms ease-in-out;
   overflow-y: scroll;
   background-color: var(--bgfooter);
+  z-index: 999;
 }
 
 .header_menu_nav.is-open-mob {
@@ -1041,11 +1042,11 @@ body {
 /* Модальные окна */
 
 .modal {
-  scale: 0;
+  /* scale: 0; */
   opacity: 0;
   transition: scale 500ms cubic-bezier(0.4, 0, 0.2, 1), opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
   position: fixed;
-  z-index: 1;
+  z-index: 0;
   left: 0;
   top: 0;
   width: 100%;
@@ -1103,7 +1104,7 @@ body {
 .window-buynow {
   position: absolute;
   top: 0;
-  left: 300px;
+  left: 50%;
   transform: translate(-50%, 0);
   background-color: var(--bgcolor);
   z-index: 998;
@@ -1112,17 +1113,15 @@ body {
   padding: 32px 24px;
   border-radius: 15px;
   overflow: scroll;
-  /* scale: 0;
-  /* transition: scale 500ms cubic-bezier(0.4, 0, 0.2, 1); */
-  transform: skew(180deg, 0deg);
-  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  scale: 0;
+  transition: scale 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform-origin: 0 50%;
 }
 
 .modal.is-open .window-buynow {
-  /* scale: 1; */
-  /* transition: scale 500ms cubic-bezier(0.4, 0, 0.2, 1); */
-  transform: skew(0deg, 0deg);
-  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform-origin: 0 50%;
+  scale: 1;
+  transition: scale 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buynow-title-text {
