--- a/css/style.css
+++ b/css/style.css
@@ -1114,14 +1114,14 @@ body {
   border-radius: 15px;
   overflow: scroll;
   scale: 0;
-  transition: scale 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform-origin: 0 50%;
 }
 
 .modal.is-open .window-buynow {
   transform-origin: 0 50%;
   scale: 1;
-  transition: scale 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buynow-title-text {
@@ -1293,6 +1293,15 @@ body {
   padding: 32px 24px;
   border-radius: 15px;
   overflow: hidden;
+  scale: 0;
+  transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform-origin: 0 50%;
+}
+
+.modal.is-open .window-review {
+  transform-origin: 0 50%;
+  scale: 1;
+  transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .review-title {
@@ -1380,6 +1389,15 @@ body {
   height: 350px;
   border-radius: 15px;
   overflow: hidden;
+  scale: 0;
+  transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform-origin: 0 50%;
+}
+
+.modal.is-open .window-subs {
+  transform-origin: 0 50%;
+  scale: 1;
+  transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .subs-title {
