--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ body {
   width: 220px;
   height: 100%;
   transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow-y: scroll;
   background-color: var(--bgfooter);
   z-index: 999;
@@ -161,6 +161,7 @@ body {
 
 .header_menu_nav.is-open-mob {
   transform: translateX(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mobile-menu {
@@ -1043,13 +1044,12 @@ body {
 /* Модальные окна */
 
 .modal {
-  /* scale: 0; */
   opacity: 0;
   transition: scale 500ms cubic-bezier(0.4, 0, 0.2, 1), opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
   position: fixed;
   z-index: 0;
   left: 0;
-  top: 0;
+  top: 80px;
   width: 100%;
   height: 100%;
   overflow: auto;
@@ -2100,7 +2100,7 @@ body {
     flex-direction: row;
     transform: none;
     width: 735px;
-    background-color: var(--color_wh);
+    background-color: var(--bgcolor);
   }
 
   .logo_menu {
@@ -2122,10 +2122,11 @@ body {
   .header > .container {
     position: fixed;
     left: 50%;
-    background-color: var(--color_wh);
+    background-color: var(--bgcolor);
     z-index: 30;
     transform: translateX(-50%);
     width: 1200px;
+    margin-top: -80px;
   }
 
   .mobile-menu-close {
@@ -2149,6 +2150,7 @@ body {
     border-radius: 30px;
     overflow: hidden;
     padding: 361px 40px 40px 40px;
+    margin-top: 80px;
   }
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
