--- a/css/style.css
+++ b/css/style.css
@@ -1049,7 +1049,7 @@ body {
   position: fixed;
   z-index: 0;
   left: 0;
-  top: 80px;
+  top: 0;
   width: 100%;
   height: 100%;
   overflow: auto;
@@ -2058,6 +2058,10 @@ body {
     max-width: 1200px;
     padding: 0 32px;
     padding-bottom: 72px;
+  }
+
+  .modal {
+    top: 80px;
   }
 
   /* Секция Footer */
